--- a/gitback-backend/package.json
+++ b/gitback-backend/package.json
@@ -9,6 +9,7 @@
   "author": "NoFish",
   "license": "ISC",
   "dependencies": {
+    "@firebase/auth": "^1.9.1",
     "cookie-parser": "^1.4.7",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
